@startuml
skinparam linetype ortho
skinparam backgroundColor #1E1E1E
skinparam defaultTextAlignment center
skinparam ArrowColor #B0C4DE
skinparam shadowing false
skinparam FontColor #FFFFFF
skinparam classFontColor #FFFFFF
skinparam classAttributeFontColor #FFFFFF
skinparam classMethodFontColor #FFFFFF

skinparam class {
  BackgroundColor #2D2D2D
  BorderColor #8A8A8A
  FontColor #E0E0E0
}

!include Mapper.puml
!include ToEntityMapper.puml
!include LongIdMapper.puml
!include StringNameMapper.puml
!include AmountMapper.puml
!include MeasureUnitDTOToMeasureUnitMapper.puml
!include LongVersionMapper.puml

interface IngredientDTOToIngredientMapper extends Mapper, ToEntityMapper {
    + void map(IngredientDTO source, Ingredient target)
    + Ingredient mapToEntity(IngredientDTO ingredientDTO)
}

class SimpleIngredientDTOToIngredientMapper implements IngredientDTOToIngredientMapper {
    - LongIdMapper longIdMapper
    - StringNameMapper stringNameMapper
    - AmountMapper amountMapper
    - MeasureUnitDTOToMeasureUnitMapper measureUnitDTOToMeasureUnitMapper
    - LongVersionMapper longVersionMapper

    + Ingredient mapToEntity(IngredientDTO ingredientDTO)
    + void map(IngredientDTO ingredientDTO, Ingredient ingredient)
    - void mapId(IngredientDTO ingredientDTO, Ingredient ingredient)
    - void mapName(IngredientDTO ingredientDTO, Ingredient ingredient)
    - void mapAmount(IngredientDTO ingredientDTO, Ingredient ingredient)
    - void mapMeasureUnitDTOToMeasureUnit(IngredientDTO ingredientDTO, Ingredient ingredient)
    - void mapVersion(IngredientDTO ingredientDTO, Ingredient ingredient)
}

SimpleIngredientDTOToIngredientMapper --> LongIdMapper
SimpleIngredientDTOToIngredientMapper --> StringNameMapper
SimpleIngredientDTOToIngredientMapper --> AmountMapper
SimpleIngredientDTOToIngredientMapper --> MeasureUnitDTOToMeasureUnitMapper
SimpleIngredientDTOToIngredientMapper --> LongVersionMapper
@enduml